# SpaceDebrisAI

./: .env  .env.example  .gitignore  Dockerfile  README.md  SYSTEM_EXPLAINED.md  app.py  full.md  newidea.md  requirements.txt  vercel.json
.claude/: settings.local.json
.github/workflows/: backend-watchdog.yml
backend/: pyproject.toml  requirements.txt  test_endpoints.ps1  test_endpoints.sh  test_sgp4.py
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/data/: cdm_cache.json  debris_all.tle  debris_leo.tle  last_update.txt  tles.txt
backend/app/middleware/: __init__.py  exceptions.py
backend/app/routes/: admin.py  api_keys.py  auth.py  cascade.py  cdm.py  health.py  login_logs.py  risk.py  satellites.py  shell.py  simulate.py  spaceweather.py  tracker.py  usage.py  user.py
backend/app/services/: api_keys.py  cascade_ai.py  login_log.py  odri.py  odri_engine.py  orbit.py  orbit_real.py  risk_engine.py  space_weather.py  spacetrack.py  tle_fetcher.py  usage_metrics.py
backend/app/utils/: __init__.py  json_safe.py
backend/data/: satellites.tle
backend/ml_logic/: avoidance.py  classifier.py  risk_engine.py
docs/: SHOWCASE.md
frontend/: .build-timestamp  .env.example  README.md  index.html  package-lock.json  package.json  supabase_setup.sql  vite.config.js
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: backend.js  dashboard.js
frontend/src/components/: Footer.jsx  (+14 more)
ml_logic/: risk_engine.py
scripts/: download_tles.py  gen_satellites_js.py  space_watchdog.py
(+36 files in other folders)
