[tool.poetry]
name = "spacedebrisai-backend"
version = "0.1.0"
description = "SpaceDebrisAI FastAPI backend"
authors = ["Viren Pandey"]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
requests = "^2.32.5"
sgp4 = "^2.25"
pydantic = "^2.12.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
